# django-cookbook

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  lint.bash  pyproject.toml
django_cookbook/: manage.py
django_cookbook/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
django_cookbook/app/: admin.py  apps.py  models.py  urls.py  views.py
django_cookbook/app/migrations/: 0001_initial.py  0002_a_remark.py  0003_a_group.py  0004_alter_a_group.py  0005_a_detail.py
django_cookbook/django_cookbook/: asgi.py  settings.py  urls.py  wsgi.py
